# music_segmentation_toolkit_rule_based_beethoven

./: .gitignore  README.md  pyproject.toml
src/: example.ipynb
src/TEST/: pathetique_main_rhythm.csv  pathetique_main_rhythm.mid
src/music_segmentation_toolkit_rule_based_beethoven/: __init__.py  cli.py  csv_io.py  main_rhythm.py  midi_io.py  note_event.py  validation.py
